C2 compilation fails with "assert(node->_last_del == _last) failed: must have deleted the edge just produced"

XMLWordPrintable

    • b11

        The example of test is in attachment. Run
        java -Xcomp -XX:-TieredCompilation Test
        to reproduce issue. head of hs_err is:
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/node.cpp:118
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/c4ee7e63-1ded-4e8c-9581-ce26f27e3af4-S72/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/3e8f11e1-a6d3-472f-9301-2c71c1d9e6b4/runs/25f26cb8-1ed1-4dce-8b18-41fa9ae0169e/workspace/open/src/hotspot/share/opto/node.cpp:118), pid=10789, tid=10800
        # assert(node->_last_del == _last) failed: must have deleted the edge just produced
        #
        # JRE version: Java(TM) SE Runtime Environment (12.0+9) (fastdebug build 12-ea+9)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-ea+9, compiled mode, compressed oops, g1 gc, linux-amd64)
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e %P %I %h" (or dumping to /scratch/lmesnik/ws/JavaFuzzer/results/12_05/crashes/r2-388/core.10789)
        #

          1. FuzzerUtils.java
            13 kB
          2. Test.java
            10 kB
          3. hs_err_pid10346.log
            60 kB
          4. replay_pid10346.log
            96 kB

              Assignee:
              Tobias Hartmann
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: