8210387: C2 compilation fails with "assert(node->_last_del == _last) failed: must have deleted the edge just produced"

Refresh iterator and start from the beginning while there is progress when removing dead regions.

Reviewed-by: kvn